k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-prod
  labels:
    app.kubernetes.io/name: taskvault
    app.kubernetes.io/part-of: taskvault-demo
    app.kubernetes.io/managed-by: github-actions
    cnapp.demo/environment: demo-prod
