k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: demo-prod
  labels:
    app.kubernetes.io/name: taskvault
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: taskvault-demo
    app.kubernetes.io/managed-by: github-actions
    cnapp.demo/environment: demo-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: taskvault
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: taskvault
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: taskvault-demo
        app.kubernetes.io/managed-by: github-actions
        cnapp.demo/environment: demo-prod
    spec:
      serviceAccountName: frontend-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - name: frontend
          image: taskvault-frontend
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001
            capabilities:
              drop: ["ALL"]
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: frontend-config-volume
              mountPath: /etc/taskvault/frontend
              readOnly: true
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
      volumes:
        - name: frontend-config-volume
          configMap:
            name: frontend-config
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
